[package]
name = "periph-core"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serialport = { version = "4", default-features = false }
thiserror = "2"

[target.'cfg(target_os = "linux")'.dependencies]
hidapi = { version = "2", default-features = false, features = ["linux-static-hidraw"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
hidapi = "2"
